feat: team simulator in API
